[package]
name = "redis-queue-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
redis = "0.24.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"]}
hyper = { version = "0.14.28", features = ["full"]}
serde = { version = "1.0.197", features = ["derive"]}
